--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -16,11 +16,11 @@
         <div v-loading="loading" style="margin:0px 10px">
             <div class="wln-subtitle">
                 <span style="float:right;">
-                    @if (!string.IsNullOrEmpty(ViewBag.Student)) {<el-button size="small" :plain="true" type="info" onclick="history.back()">返回</el-button>}
-                    <el-button size="small" :plain="true" type="info" onclick="app.refresh()">刷新</el-button>
-                    <el-button type="primary" size="small" @@click="location.href='discount?student=' + student" v-if="student">优惠管理</el-button>
-                    <el-button type="primary" size="small" @@click="location.href='newfeeorder?student=' + student" v-if="student">生成缴费清单</el-button>
-                    <el-button type="primary" size="small" @@click="location.href='newfeeorder?classes=' + classesSelectId" v-if="classesSelectId">批量生成缴费清单</el-button>
+                    @if (!string.IsNullOrEmpty(ViewBag.Student)) {<el-button size="mini" :plain="true" type="info" onclick="history.back()">返回</el-button>}
+                    <el-button size="mini" :plain="true" type="info" onclick="app.refresh()">刷新</el-button>
+                    <el-button size="mini" type="primary" @@click="location.href='discount?student=' + student" v-if="student">优惠管理</el-button>
+                    <el-button size="mini" type="primary" @@click="location.href='newfeeorder?student=' + student" v-if="student">生成缴费清单</el-button>
+                    <el-button size="mini" type="primary" @@click="location.href='newfeeorder?classes=' + classesSelectId" v-if="classesSelectId">批量生成缴费清单</el-button>
                 </span>
                 缴费清单 <span>{{classesSelectName}}</span>
             </div>
@@ -38,13 +38,14 @@
                         </el-popover>
                     </template>
                 </el-table-column>
-                <el-table-column width="100" align="center" label="状态">
+                <el-table-column width="100" align="right" label="实缴" property="paid"></el-table-column>
+                <el-table-column width="140" align="center" label="状态">
                     <template scope="scope">
-                        <el-tag type="success" v-if="scope.row.ispay > 0">已缴费</el-tag>
-                        <el-tag type="gray" v-else>待支付</el-tag>
+                        <font style="color:#67C23A;" v-if="scope.row.ispay > 0">已缴费</font>
+                        <font style="color:#409EFF;" v-else>待支付</font>
                     </template>
                 </el-table-column>
-                <el-table-column width="100" align="right" label="实缴" property="paid"></el-table-column>
+                <el-table-column></el-table-column>
                 <el-table-column width="100" align="center" label="微信推送">
                     <template scope="scope">
                         <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-if="scope.row.ispay > 0">已缴费</el-button>
@@ -54,7 +55,7 @@
                         <el-button size="mini" @@click="wxpush(scope.row.id)" type="info" title="点击重新推送" v-else>未推送</el-button>
                     </template>
                 </el-table-column>
-                <el-table-column align="center" label="操作">
+                <el-table-column width="240" align="center" label="操作">
                     <template scope="scope">
                         <el-button size="mini" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button>
                         <el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button>
