--- a/docker/Views/charge/newfeeorder.cshtml
+++ b/docker/Views/charge/newfeeorder.cshtml
@@ -21,13 +21,13 @@
             </el-col>
         </el-form-item>
     </el-form>
-    <el-table :data="rows" show-summary :summary-method="getSummaries" :empty-text="message" border>
+    <el-table :data="rows" show-summary :summary-method="getSummaries" :empty-text="message">
         <el-table-column width="40" align="center" type="index"></el-table-column>
         <el-table-column width="200" align="left" label="收费项目" property="name"></el-table-column>
         <el-table-column width="100" align="right" label="单价" property="price"></el-table-column>
         <el-table-column width="250" align="center" label="缴费期间">
             <template scope="scope">
-                <el-date-picker v-model="scope.row.picker" :editable="false" type="daterange" format="yyyy-MM-dd" range-separator=" - " style="width:200px"></el-date-picker>
+                <el-date-picker v-model="scope.row.picker" :editable="false" type="daterange" format="yyyy-MM-dd" range-separator=" - " style="width:210px"></el-date-picker>
             </template>
         </el-table-column>
         <el-table-column width="100" align="center" label="数量">
@@ -39,7 +39,7 @@
         <el-table-column></el-table-column>
         <el-table-column width="100" align="center" label="操作">
             <template scope="scope">
-                <el-button size="small" type="primary" @@click="handleRemove(scope.row)">移除</el-button>
+                <el-button size="mini" type="primary" @@click="handleRemove(scope.row)">移除</el-button>
             </template>
         </el-table-column>
     </el-table>
