--- a/docker/Views/charge/discountall.cshtml
+++ b/docker/Views/charge/discountall.cshtml
@@ -2,13 +2,14 @@
     <div style="margin:0px 10px;">
         <div class="wln-subtitle">
             <div style="float:right">
-                <el-button size="small" :plain="true" onclick="location.href = 'control'">返回</el-button>
-                <el-button size="small" type="success" @@click="stopVerify()" v-if="DiscountVerify">已启用审核</el-button>
-                <el-button size="small" type="info" @@click="openVerify()" v-else="DiscountVerify">未启用审核</el-button>
+                <el-button size="mini" type="info" :plain="true" onclick="location.href = 'control'">返回</el-button>
+                <el-button size="mini" type="success" @@click="stopVerify()" v-if="DiscountVerify">已启用审核</el-button>
+                <el-button size="mini" type="info" @@click="openVerify()" v-else="DiscountVerify">未启用审核</el-button>
                 <input type="text" v-model="key" :value="key" @@keydown="search($event)" placeholder="按回车键进行查找" />
             </div>
             优惠审批
         </div>
+        <div class="wln-line"></div>
         <el-table :data="rows" :empty-text="message">
             <el-table-column width="150" align="center" label="校园" property="organ"></el-table-column>
             <el-table-column width="150" align="center" label="学员姓名" property="studentname"></el-table-column>
@@ -19,19 +20,21 @@
             <el-table-column width="140" align="center" label="申请时间" property="create"></el-table-column>
             <el-table-column width="90" align="center" label="状态">
                 <template scope="scope">
-                    <el-tag type="gray" v-if="scope.row.state === 0">未送审</el-tag>
-                    <el-tag type="danger" v-if="scope.row.state === 1">未通过</el-tag>
-                    <el-tag type="warning" v-if="scope.row.state === 2">待审核</el-tag>
-                    <el-tag type="success" v-if="scope.row.state === 3 && scope.row.state !== 0">已审核</el-tag>
-                    <el-tag type="info" v-if="scope.row.state === 3 && scope.row.state === 0">已使用</el-tag>
+                    <font style="color:#409EFF;" v-if="scope.row.state===0">未送审</font>
+                    <font style="color:#F56C6C;" v-else-if="scope.row.state===1">未通过</font>
+                    <font style="color:#E6A23C;" v-else-if="scope.row.state===2">待审核</font>
+                    <font style="color:#67C23A;" v-else-if="scope.row.state === 3 && scope.row.state !== 0">已审核</font>
+                    <font style="color:#67C23A;" v-else-if="scope.row.state === 3 && scope.row.state === 0">已使用</font>
+                    <font style="color:#909399;" v-else>其它</font>
                 </template>
             </el-table-column>
             <el-table-column width="150" align="center" label="操作">
                 <template scope="scope">
-                    <el-button size="small" @@click="handleSendTo(scope.row)" type="info" v-if="scope.row.state < 2">送审</el-button>
-                    <el-button size="small" @@click="handleDelete(scope.row)" v-if="scope.row.state < 2">删除</el-button>
-                    <el-button size="small" @@click="handleVerify(scope.row)" type="success" v-if="scope.row.state === 2">审核</el-button>
-                    <el-button size="small" @@click="handleReback(scope.row)" type="danger" v-if="scope.row.state === 2">驳回</el-button>
+                    <el-button size="mini" @@click="handleSendTo(scope.row)" type="primary" v-if="scope.row.state < 2">送审</el-button>
+                    <el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.state < 2">删除</el-button>
+                    <el-button size="mini" @@click="handleVerify(scope.row)" type="success" v-if="scope.row.state === 2">审核</el-button>
+                    <el-button size="mini" @@click="handleReback(scope.row)" type="danger" v-if="scope.row.state === 2">驳回</el-button>
+                    <el-button size="mini" type="danger" icon="el-icon-delete" @@click="handleDeleteVerify(scope.row)" v-if="scope.row.state === 3 && delverify">强制删除</el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -40,6 +43,7 @@
 </div>
 <script type="text/javascript">
     emptyPager.Loaded = true;
+    emptyPager.delverify = false;
     emptyPager.DiscountVerify = '@ViewBag.DiscountVerify' == 'True';
     var app = new Vue({
         el: '#app',
@@ -121,9 +125,27 @@
                 }).catch(() => {
                     iTips('删除操作已取消');
                 });
+            },
+            handleDeleteVerify(row) {
+                this.$confirm('您正在执行危险操作, 是否继续?', '警告', {
+                    confirmButtonText: '确定',
+                    cancelButtonText: '取消',
+                    type: 'warning'
+                }).then(() => {
+                    var _self = this;
+                    $.getJSON(location.pathname, { 'do': 'deleteverify', id: row.id }, function (rlt) {
+                        _self.refresh();
+                        app.$message({ type: rlt.success ? 'success' : 'error', message: rlt.message });
+                    });
+                }).catch(() => {
+                    iTips('删除操作已取消');
+                });
             }
         }, created() {
             this.refresh();
+            $.getJSON('/auth', { code: 'School_Discount_DeleteVerify' }, function (rlt) {
+                emptyPager.delverify = rlt.success;
+            })
         }
     });
 </script>
