--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -48,19 +48,20 @@
                 <el-table-column></el-table-column>
                 <el-table-column width="100" align="center" label="微信推送">
                     <template scope="scope">
-                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-if="scope.row.ispay > 0">已缴费</el-button>
-                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-else-if="scope.row.pushstate===3">已推送</el-button>
-                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="warning" v-else-if="scope.row.pushstate===2" title="已屏蔽或取消关注等原因会造成推送失败">推送失败</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" plain v-if="scope.row.ispay > 0">已缴费</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" plain v-else-if="scope.row.pushstate===3">已推送</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="warning" plain v-else-if="scope.row.pushstate===2" title="已屏蔽或取消关注等原因会造成推送失败">推送失败</el-button>
                         <el-button size="mini" @@click="wxpush(scope.row.id)" type="gray" title="点击重新推送" v-else-if="scope.row.pushstate===1">未绑定</el-button>
-                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="info" title="点击重新推送" v-else>未推送</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="primary" title="点击重新推送" v-else>未推送</el-button>
                     </template>
                 </el-table-column>
                 <el-table-column width="240" align="center" label="操作">
                     <template scope="scope">
-                        <el-button size="mini" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button>
-                        <el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button>
-                        <el-button size="mini" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0">缴费</el-button>
-                        <el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
+                        <el-button size="mini" type="primary" @@click="location.href='/viewer?id=' + scope.row.id" v-if="scope.row.ispay === 0">明细</el-button>
+                        <el-button size="mini" type="success" @@click="topay(scope.row.id)" v-if="scope.row.ispay === 0">缴费</el-button>
+                        <el-button size="mini" type="warning" @@click="handleDelete(scope.row)" v-if="scope.row.ispay === 0">删除</el-button>
+                        <el-button size="mini" type="primary" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">按月扣款</el-button>
+                        <el-button size="mini" type="warning" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">缴费单据</el-button>
                     </template>
                 </el-table-column>
             </el-table>
