--- a/docker/Views/charge/retainer.cshtml
+++ b/docker/Views/charge/retainer.cshtml
@@ -37,10 +37,10 @@
             <el-table-column width="140" align="center" label="录入时间" property="create"></el-table-column>
             <el-table-column width="150" align="center" label="操作">
                 <template scope="scope">
-                    <el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1 && scope.row.payid">查看缴费单据</el-button>
-                    <el-button size="mini" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0 && (scope.row.type == '预缴' || scope.row.type == '定金')">缴费</el-button>
-                    <el-button size="mini" @@click="handleVerify(scope.row)" type="primary" v-if="scope.row.ispay === 0 && scope.row.type != '预缴' && scope.row.type != '定金'">审核</el-button>
-                    <el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
+                    <el-button size="mini" type="warning" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1 && scope.row.payid">查看缴费单据</el-button>
+                    <el-button size="mini" type="success" @@click="topay(scope.row.id)" v-if="scope.row.ispay === 0 && (scope.row.type == '预缴' || scope.row.type == '定金')">缴费</el-button>
+                    <el-button size="mini" type="primary" @@click="handleVerify(scope.row)" v-if="scope.row.ispay === 0 && scope.row.type != '预缴' && scope.row.type != '定金'">审核</el-button>
+                    <el-button size="mini" type="warning" @@click="handleDelete(scope.row)" v-if="scope.row.ispay === 0">删除</el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -282,7 +282,6 @@
                 _self.getTotal();
                 _self.refresh();
             })</text>}else{<text>
-            this.getTotal();
             this.refresh();</text>}
 
         }
