--- a/docker/Views/charge/viewer.cshtml
+++ b/docker/Views/charge/viewer.cshtml
@@ -12,7 +12,7 @@
             <el-col :span="22">@Html.Raw(ViewBag.StudentId)</el-col>
         </el-form-item>
     </el-form>
-    <el-table v-loading="listLoading" :data="rows" show-summary :summary-method="getSummaries" :empty-text="message" border>
+    <el-table v-loading="listLoading" :data="rows" show-summary :summary-method="getSummaries" :empty-text="message">
         <el-table-column width="40" align="center" type="index"></el-table-column>
         <el-table-column width="200" align="left" label="收费项目" property="feescalename"></el-table-column>
         <el-table-column width="100" align="center" label="单价" property="price"></el-table-column>
@@ -23,12 +23,12 @@
         } else {
         <el-table-column width="250" align="center" label="缴费期间">
             <template scope="scope">
-                <el-date-picker v-model="scope.row.picker" @@change="pickerChange(scope.row)" :editable="false" type="daterange" format="yyyy-MM-dd" range-separator=" - " style="width:200px"></el-date-picker>
+                <el-date-picker v-model="scope.row.picker" @@change="pickerChange(scope.row)" :editable="false" type="daterange" format="yyyy-MM-dd" range-separator=" - " style="width:210px"></el-date-picker>
             </template>
         </el-table-column>
         <el-table-column width="100" align="center" label="数量">
             <template scope="scope">
-                <input type="text" v-model="scope.row.count" @@change="countChange(scope.row)" style="width:96%;text-align:center;" />
+                <input type="text" v-model="scope.row.count" @@change="countChange(scope.row)" style="width:96%;text-align:center;line-height:38px;border-radius:5px;" />
             </template>
         </el-table-column>
         }
